[l38] works, will look to make non recursive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,3 +65,6 @@ add_executable(search_in_rotated_sorted_array
 
 add_executable(valid_sudoku
   l36_valid_sudoku.cpp)
+
+add_executable(count_and_say
+  l38_count_and_say.cpp)
