--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,6 @@ add_executable(convert_array_to_binary_search_tree
 
 add_executable(pascals_triangle
   l118_pascals_triangle.cpp)
+
+add_executable(container_with_most_water
+  l11_container_with_most_water.cpp)
